--- a/Authentication/appsettings.json
+++ b/Authentication/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "80808080808080808080808080808080"
+  },
   "AllowedHosts": "*"
 }
