--- a/TaskManagementAPI/appsettings.json
+++ b/TaskManagementAPI/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\Practical;Database=TaskManagementDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Key": "80808080808080808080808080808080"
+  },
   "AllowedHosts": "*"
 }
